--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=8080
 
-STREAM_API_KEY= your stream api key here
-STREAM_API_SECRET= your stream api secret here
-HUBSPOT_API_KEY=your hubspot api key here
+STREAM_API_KEY= your Stream API key here
+STREAM_API_SECRET= your Stream API secret here
+HUBSPOT_API_KEY=your HubSpot API key here 
